# community

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  BREAKING_CHANGES.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRACTICES.md  README.md  Taskfile.yml  app_bundle.py  community.code-workspace  conf.py  conftest.py  debug_info.py  engines.py  eye_tracking_settings.py  index.md  justfile  languages.py  notes.md  proc_helper.py  pyproject.toml  requirements-docs.txt  run_tests.py  save_register.talon  scale.py  settings.talon  settings_linux.talon  settings_mac.talon  shared_settings_module.py  transaction.yaml  utils.py
.github/: dependabot.yml
.tools/: convert_all_csv_files_to_talon-list.py
01_dougs_configs/: command_settings.talon  dictation_settings.talon  extensions.talon  sleep_wake.talon  test_scroll.py
Eduard/: .mouse.talon  .vscode.talon  Zoom_off.talon  Zoom_on.talon  anaconda_prompt_context.talon  date_time.py  date_time.talon  misc.talon  mouse_guide.py  mouse_guide.talon  onenote.py  onenote.talon  outlook.talon  pass.talon  powerpoint presenter mode.talon  powerpoint.talon  r_keys.talon  restart.py  speech_timeout_dictation.talon  talon_restart.gitignore_global  terminal_misc.talon  terminal_misc_cluster.talon  ui_helper_commands.talon  vscode_EA.talon  warp.py  warp.talon  windows_desktop.talon  windows_explorer.talon
actions/: basic_keys.py  canvas_history.py  code.py  engine.py  formatters.py  homophones.csv  homophones.py  keys.py  mouse.py  numbers.py  password_manager.py  repeater.py  switcher.py
apps/: README.md  browser.talon  conemu.talon  design.talon  dylan.talon  file_manager.talon  generic_browser.talon  generic_debugger.talon  generic_terminal.talon  jetbrains.talon  jupyter.talon  kubectl.talon  line_commands.talon  linear.py  linear.talon  my_generic_browser.talon  notepad++.talon  notes_dylan.txt  rstudio.talon  slack.talon  sleep.talon  talon_repl.talon  vscode.talon  vscode_generic.talon  wake.talon  wordpress.talon
brxck/: confirm.py  git.py  graphite.py  graphite.talon  graphite.talon-list  macropad.py  macropad.talon  owner.py  owner.talon  owner_apps.talon-list  solv.py  solv.talon
clickable_overlay/: accessible_test.py  clickable_overlay.py  clickable_overlay_bindings.talon
clickless_mouse/: README.md  clickless_mouse.py  clickless_mouse.talon
code/: __init__.py  abbreviate.py  add_vocabulary.py  application_matches.py  browser.py  cancel.py  chapters.py  clickless_mouse.py  code.py  compass_control.py  create_spoken_forms.py  debugger.py  delayed_speech_off.py  desktops.py  dictate.py  dictation.py  dictation_mode.talon  edit.py  edit_custom.py  edit_text_file.py  emoji.py  engine.py  exec.py  extensions.py  file_manager.py  find_and_replace.py  firefox.py  formatters.py  gdb.py  git.py  help.py  help_scope.py  (+65 more)
talon-gaze-ocr/: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  gaze_ocr.talon  gaze_ocr_disambiguation.talon  gaze_ocr_talon.py  ocr_actions.talon-list  ocr_common_actions.talon-list  ocr_modifiers.talon-list  pull_all.ps1  pull_all.sh  push_all.ps1  push_all.sh  pyproject.toml  timestamped_captures.py
talon-gaze-ocr/.github/workflows/: push_subtrees.yml
talon-gaze-ocr/.subtrees/gaze-ocr/: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
talon-gaze-ocr/.subtrees/gaze-ocr/.github/workflows/: test.yml
talon-gaze-ocr/.subtrees/gaze-ocr/gaze_ocr/: __init__.py  _gaze_ocr.py  dragonfly.py  eye_tracking.py  talon.py  talon_adapter.py
talon-gaze-ocr/.subtrees/gaze-ocr/tests/: gaze_ocr_test.py
talon-gaze-ocr/.subtrees/screen-ocr/: .git-blame-ignore-revs  .gitignore  README.md  benchmark_screenshot_performance.py  pyproject.toml  screen_ocr_tool.py
talon-gaze-ocr/.subtrees/screen-ocr/.github/workflows/: deploy_repo_guide.yml  publish.yml
talon-gaze-ocr/.subtrees/screen-ocr/screen_ocr/: __init__.py  __main__.py  _base.py  _easyocr.py  _screen_ocr.py  _talon.py  _tesseract.py  _winrt.py
talon-gaze-ocr/.subtrees/screen-ocr/tests/: screen_ocr_test.py  test_utils.py  test_utils_test.py
(+2326 files in other folders)
