[project]
name = "talon-gaze-ocr"
version = "0.1.0"
description = "Talon scripts to enable advanced cursor control using eye tracking and text recognition (OCR)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
extend-exclude = [".subtrees/rapidfuzz"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "SIM105", "SIM116", "UP045"]

[tool.pyright]
pythonVersion = "3.11"
# Talon action class methods don't use self so ignore the associated errors and warnings
reportGeneralTypeIssues = false
reportSelfClsParameterName = false
# Talon can't be installed in CI so ignore source errors
reportMissingImports = false
extraPaths = [".subtrees/gaze-ocr", ".subtrees/screen-ocr", ".subtrees/rapidfuzz/src"]
# Override auto-exclude for owned subtrees, but keep rapidfuzz excluded
exclude = [".subtrees/rapidfuzz"]
